# Speech-to-text

.devcontainer/: devcontainer.json
STT/: main.py  packages.txt  pyproject.toml  requirements.txt
STT/STT V2.py/: main.py  main2_05_06_25.py
