[project]
name = "speech-to-text"
version = "0.1.0"
dependencies = [
    "streamlit==1.38.0",
    "sounddevice==0.5.0",
    "transformers==4.46.0",
    "numpy==1.26.4",
    "torch==2.3.1",
    "librosa==0.10.2.post1",
    "soundfile==0.12.1",
    "rich==13.7.1",
]
requires-python = ">=3.9,<3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
